# dspy-newsletter-research-poc

./: .claude  .env.example  .gitignore  docker-compose.yml  pyproject.toml  pytest.ini
.beads/: issues.jsonl
.claude/: .gitignore  settings.json  setup-statusline.sh  statusline-python.sh  statusline_analyzer.py
.claude/agents/: backend-solutions-engineer.md  claude-md-compliance-checker.md  frontend-dev-expert.md  linkedin-automation-agent.md  solution-design-architect.md  tdd-test-engineer.md  validation-agent.md
.claude/commands/: check-messages.md  o3-pro.md  parallel-solutioning.md  use-codex-support.md
.claude/completion-state/: session-state.json
.claude/hooks/: completion-gate.py  completion-gate.sh  load-mcp-skills.sh  message-bus-signal-check.py  session-start-orchestrator-detector.py  unified-stop-gate.sh  (+1 more)
docs/: DSPY_BEST_PRACTICES.md  DSPY_OPTIMIZERS_GUIDE.md  DSPY_PATTERNS_COOKBOOK.md  SESSION_COMPLETION_2026-01-13.md
scripts/: health_check.py  init_weaviate.py
src/: __init__.py  classification.py  cli.py  config.py  deduplication.py  ingestion.py  models.py  optimization.py  prefilter.py  query_agent.py  storage.py
tests/: __init__.py  conftest.py  test_classification.py  test_cli.py  test_deduplication.py  test_infrastructure.py  test_ingestion.py  test_models.py  test_optimization.py  test_prefilter.py  test_query_agent.py  test_storage.py
workspace/: architect-6-handoff-summary.md  architect-handoff.md  architect1-handoff-summary.md  architect2-implementation-handoff.md  input_poc_documentation.md  input_sources_research.md
(+294 files in other folders)
